fixed whitespace on mobile

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s;
-  z-index: 100;
+  z-index: 50;
 }
 
 .cart-layout.active {
@@ -457,8 +457,8 @@ main {
 
 .swiper-slide img {
   width: 100%;
-  object-fit: cover;
   height: 100%;
+  object-fit: cover;
 }
 
 .swiper-button-next,
@@ -689,6 +689,22 @@ footer {
   }
 }
 
+@media screen and (min-width: 601px) {
+  .hamburger-container {
+    display: none;
+  }
+
+  .mobile-nav {
+    display: none;
+  }
+
+  .dark.is-active {
+    opacity: 0;
+    visibility: hidden;
+    z-index: -1;
+  }
+}
+
 @media screen and (max-width: 600px) {
   body {
     width: 100%;
@@ -701,6 +717,10 @@ footer {
     margin-bottom: 1.5rem;
   }
 
+  .lightbox {
+    overflow: hidden;
+  }
+
   .navbar {
     width: 100%;
     height: 70px;
@@ -709,6 +729,10 @@ footer {
     align-items: center;
     padding: 0 1.5rem;
     border-bottom: none;
+  }
+
+  .logo {
+    margin-right: 2rem;
   }
 
   .nav-cart {
@@ -790,23 +814,6 @@ footer {
     display: none;
   }
 }
-
-@media screen and (min-width: 950px) {
-  .hamburger-container {
-    display: none;
-  }
-
-  .mobile-nav {
-    display: none;
-  }
-
-  .dark.is-active {
-    opacity: 0;
-    visibility: hidden;
-    z-index: -1;
-  }
-}
-
 /*-------- Lightbox feature --------- */
 .lightbox {
   width: 100%;
